Fix ColorShorthand alignment

--- a/src/components/ColorShorthand.module.css
+++ b/src/components/ColorShorthand.module.css
@@ -1,6 +1,8 @@
 .container {
   white-space: nowrap;
-  text-align: center;
+  display: flex;
+  align-items: center;
+  justify-content: center;
 }
 
 .letter {
